installed react snap but currently not using it
it is not compatible with current version of react.

--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,37 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <title>Tech Roadmap</title>
+
     <!--* Seo Tags -->
     <!-- Primary Meta Tags -->
     <meta name="type" content="website" />
     <meta name="author" content="Pelumi Akintokun, Timonwa" />
+    <meta name="title" content="Tech Roadmap" />
+    <meta
+      name="description"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/seo-image.png" />
+    <meta property="og:url" content="https://techroadmap.xyz" />
+    <meta property="og:title" content="Tech Roadmap" />
+    <meta
+      property="og:description"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:image" content="%PUBLIC_URL%/seo-image.png" />
+    <meta property="twitter:url" content="https://techroadmap.xyz" />
+    <meta property="twitter:title" content="Tech Roadmap" />
+    <meta
+      property="twitter:description"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
